platform/k8s/ingress-class.yaml
# IngressClass for EKS Auto Mode ALB Controller.
# Must be applied before any Ingress resources.
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: eks.amazonaws.com/alb
