platform/k8s/flyte-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: eks.amazonaws.com/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flyte-ui
  namespace: flyte
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /console
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /console
            pathType: Prefix
            backend:
              service:
                name: flyteconsole
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flyteadmin
                port:
                  number: 80
          - path: /healthcheck
            pathType: Exact
            backend:
              service:
                name: flyteadmin
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flyteconsole
                port:
                  number: 80
